kubernetes/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: alert-webhooks
  name: alert-webhooks
